added image-cropper styling and took out ion-item tags for about-me sections

--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -69,8 +69,7 @@ app-dashboard {
   }
 
   .image-cropper {
-    width: 120px;
-    height: 120px;
+    width: 90%;
 
     img {
       border-radius: 50%;
