--- a/src/app/pages/main-tab/main-tab.page.html
+++ b/src/app/pages/main-tab/main-tab.page.html
@@ -1,5 +1,5 @@
 <ion-tabs [hidden]="!userData || !userData.user">
-  <ion-tab-bar slot="bottom" *ngIf="platform.width() < 768">
+  <ion-tab-bar slot="bottom" *ngIf="(platform.width() < 768) && !userData.videoChatRoomId">
     <ion-tab-button tab="discover" *ngIf="!userData.defaultProgram" [ngClass]="{'tab-selected': router.url.includes('discover')}">
       <ion-icon ios="people-sharp" md="people-sharp"></ion-icon>
     </ion-tab-button>
