--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -347,7 +347,7 @@
                 <!--<ion-badge color="darkgrey" class="goal-type">Goal</ion-badge>-->
                 <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
                   <!--<ion-icon [ngStyle]="{'color': (goal[3] | background : goal[0] : 'color') }" name="flag" class="goal-icon"></ion-icon>-->
-                  <ion-textarea class=" ion-margin-start" [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}" autosize rows="1" [minRows]="1" [maxRows]="8" [(ngModel)]="goal[5]" (ionInput)="touchGoal(goal, 'text')" placeholder="Goal Name" [disabled]="(moment.array_boolean.length > 8) && !moment.array_boolean[8]"></ion-textarea>
+                  <ion-textarea class="ion-margin-start" [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}" autosize rows="1" [minRows]="1" [maxRows]="8" [(ngModel)]="goal[5]" (ionInput)="touchGoal(goal, 'text')" placeholder="Goal Name" [disabled]="(moment.array_boolean.length > 8) && !moment.array_boolean[8]"></ion-textarea>
                 </ion-item>
                 <!--<div class="progress">
                   <ion-progress-bar class="ion-margin-start" [value]="(adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'goalcompleted' : { scheduleIds:scheduleIds, goal: goal }"></ion-progress-bar>  &lt;!&ndash;[buffer]="(adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'goaldue' : { scheduleIds:scheduleIds, goal: goal }"&ndash;&gt;
@@ -388,7 +388,7 @@
               <!--<ion-badge color="darkgrey" class="goal-type">Goal</ion-badge>-->
               <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
                 <!--<ion-icon [ngStyle]="{'color': (goal[3] | background : goal[0] : 'color') }" name="flag" class="goal-icon"></ion-icon>-->
-                <ion-textarea class=" ion-margin-start" [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}" autosize rows="1" [minRows]="1" [maxRows]="8" [(ngModel)]="goal[5]" (ionInput)="touchGoal(goal, 'text')" placeholder="Goal Name"></ion-textarea>
+                <ion-textarea class="ion-margin-start" [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}" autosize rows="1" [minRows]="1" [maxRows]="8" [(ngModel)]="goal[5]" (ionInput)="touchGoal(goal, 'text')" [disabled]="(moment.array_boolean.length > 8) && !moment.array_boolean[8]" placeholder="Goal Name"></ion-textarea>
               </ion-item>
               <!--<div class="progress">
                 <ion-progress-bar class="ion-margin-start" [value]="(adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'goalcompleted' : { scheduleIds:scheduleIds, goal: goal }"></ion-progress-bar>  &lt;!&ndash;[buffer]="(adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'goaldue' : { scheduleIds:scheduleIds, goal: goal }"&ndash;&gt;
