--- a/src/app/pages/user/register/register.page.scss
+++ b/src/app/pages/user/register/register.page.scss
@@ -1,8 +1,31 @@
 app-register {
-  // .background{
-  //   background-color: grey;
 
-  // }
+  ion-slides {
+    max-width: 600px;
+    height: 100%;
+  }
+
+  ion-slide {
+    height: 100%;
+  }
+
+  ion-list {
+    background: transparent !important;
+    overflow: scroll;
+    width: 100%;
+    margin: 0;
+  }
+
+  ion-item {
+    padding-left: 10px !important;
+    --background: transparent !important;
+    margin-bottom: 10px;
+    font-size: 0.9em;
+  }
+
+  ion-select {
+    font-size: 17px;
+  }
 
   .right-signUp img{
     height: 100%;
@@ -15,26 +38,6 @@ app-register {
     padding-top: 0;
     padding-bottom: 0;
     position: relative;
-  }
-
-  ion-slides {
-    max-width: 600px;
-    height: 100%;
-  }
-
-  #welcomeSlides {
-
-  }
-
-  ion-slide {
-    height: 100%;
-  }
-
-  ion-list {
-    //background: transparent !important;
-    overflow: scroll;
-    width: 100%;
-    margin: 0;
   }
 
   p, li {
@@ -51,23 +54,6 @@ app-register {
 
   a {
     color: rgb(158, 192, 222);
-  }
-
-  ion-item {
-    padding-left: 10px !important;
-    --background: transparent !important;
-    margin-bottom: 10px;
-    font-size: 0.9em;
-  }
-
-  ion-select {
-    //color: var(--ion-color-secondary);
-    font-size: 17px;
-    //border-bottom: 2px solid  #ffa535;
-  }
-
-  ion-button {
-    //color: var(--ion-color-secondary);
   }
 
   .fade-in {
@@ -140,18 +126,20 @@ app-register {
   }
 
   .welcome-name {
-    font-size: 20px;
     color: var(--ion-color-primary);
-    font-family: Roboto Black;
     font-weight: 900;
-    font-size: 48px;
-    line-height: 56px;
+    font-size: 28px;
+    line-height: 34px;
     margin: 2% auto 0 auto;
     letter-spacing: 0.06em;
   }
 
+  .welcome-name-mobile {
+    font-size: 20px;
+    margin: 2% auto 0 auto;
+  }
+
   .welcome-title {
-    font-family: Roboto Black;
     font-size: 48px;
     //color: var(--ion-color-secondary);
     font-weight: 900;
@@ -161,28 +149,36 @@ app-register {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    font-weight:900;
   }
 
   .welcome-subtitle {
     font-size: 20px;
     //color: var(--ion-color-secondary);
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     color:white;
     font-weight:normal;
-    line-height: 36px;
+    line-height: 24px;
   }
 
   .right-signUp #signup-button {
     position: absolute;
-    top: 65%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
     border-color: white;
+  }
+
+  .right-signUp .create-account {
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 12px;
   }
 
   ion-segment {
@@ -218,24 +214,6 @@ app-register {
   ion-row {
     align-items: center;
     text-align: center;
-  }
-
-  ion-list {
-    background: transparent !important;
-    margin: 0;
-  }
-
-  ion-item {
-    padding-left: 5px !important;
-    margin-bottom: 10px;
-    --background: transparent;
-    font-size: 0.9em;
-  }
-
-  ion-select {
-    //color: var(--ion-color-secondary);
-    font-size: 17px;
-    //border-bottom: 2px solid #ffa535;
   }
 
   .form {
@@ -374,7 +352,6 @@ app-register {
     //color: var(--ion-color-secondary);
   }
 
-
   .custom-back-button {
     margin-bottom: 15%;
   }
@@ -382,8 +359,6 @@ app-register {
   .swiper-pagination-bullet {
     opacity: 1;
   }
-
-
 }
 
 
