--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -70,7 +70,7 @@
     </ion-grid>
   </div>
   <div *ngIf="view === 'welcome'" class="full-height fade-in">
-    <ion-grid class="full-height">
+    <ion-grid class="full-height welcome-form">
       <ion-row class="ion-align-items-center full-height overflow">
         <ion-list>
           <ion-buttons style="margin-left: 18px" slot="start" (click)="view = 'signin'">
