--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -486,13 +486,20 @@
           </ion-item>
           <ion-grid style="max-height: 20%; overflow: scroll">
             <ion-row class="participant-row">
-              <ion-col *ngFor="let user of moment.user_list_1; index as j" class="ion-align-self-center" size="auto">
+              <ion-col *ngFor="let user of moment.user_list_1.slice(0, 11); index as j" class="ion-align-self-center" size="auto">
                 <ion-item lines="none" (click)="seeUserInfo($event, user)">
                   <div class="participant-centered">
                     <ion-avatar class="participant-avatar" slot="start">
                       <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
                       <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
                     </ion-avatar>
+                  </div>
+                </ion-item>
+              </ion-col>
+              <ion-col *ngIf="moment.user_list_1.length > 11" class="ion-align-self-center" size="auto">
+                <ion-item lines="none" (click)="seeUserInfo($event, user)">
+                  <div class="participant-centered">
+                    <ion-avatar class="participant-avatar" slot="start">+{{ moment.user_list_1.length - 11 }}</ion-avatar>
                   </div>
                 </ion-item>
               </ion-col>
@@ -507,13 +514,20 @@
           </ion-item>
           <ion-grid style="max-height: 20%; overflow: scroll">
             <ion-row class="participant-row">
-              <ion-col *ngFor="let user of moment.user_list_2; index as j" class="ion-align-self-center" size="auto">
+              <ion-col *ngFor="let user of moment.user_list_2.slice(0, 11); index as j" class="ion-align-self-center" size="auto">
                 <ion-item lines="none" (click)="seeUserInfo($event, user)">
                   <div class="participant-centered">
                     <ion-avatar class="participant-avatar" slot="start">
                       <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
                       <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
                     </ion-avatar>
+                  </div>
+                </ion-item>
+              </ion-col>
+              <ion-col *ngIf="moment.user_list_2.length > 11" class="ion-align-self-center" size="auto">
+                <ion-item lines="none" (click)="seeUserInfo($event, user)">
+                  <div class="participant-centered">
+                    <ion-avatar class="participant-avatar" slot="start">+{{ moment.user_list_2.length - 11 }}</ion-avatar>
                   </div>
                 </ion-item>
               </ion-col>
@@ -528,13 +542,20 @@
           </ion-item>
           <ion-grid style="max-height: 20%; overflow: scroll">
             <ion-row class="participant-row">
-              <ion-col *ngFor="let user of moment.user_list_3; index as j" class="ion-align-self-center" size="auto">
+              <ion-col *ngFor="let user of moment.user_list_3.slice(0, 11); index as j" class="ion-align-self-center" size="auto">
                 <ion-item lines="none" (click)="seeUserInfo($event, user)">
                   <div class="participant-centered">
                     <ion-avatar class="participant-avatar" slot="start">
                       <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
                       <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
                     </ion-avatar>
+                  </div>
+                </ion-item>
+              </ion-col>
+              <ion-col *ngIf="moment.user_list_3.length > 11" class="ion-align-self-center" size="auto">
+                <ion-item lines="none" (click)="seeUserInfo($event, user)">
+                  <div class="participant-centered">
+                    <ion-avatar class="participant-avatar" slot="start">+{{ moment.user_list_3.length - 11 }}</ion-avatar>
                   </div>
                 </ion-item>
               </ion-col>
