limited the height

--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -484,7 +484,7 @@
             <ion-label color="darkgrey" class="section-label ion-text-uppercase" *ngIf="moment.matrix_string[i] && !moment.matrix_string[i][3] && moment.resource['en-US'].matrix_string[i]">{{moment.resource['en-US'].matrix_string[i][5]}}</ion-label>
             <ion-label color="darkgrey" class="section-label ion-text-uppercase" *ngIf="moment.matrix_string[i] && moment.matrix_string[i][3]">{{moment.matrix_string[i][3]}}</ion-label>
           </ion-item>
-          <ion-grid style="max-height: 20%; overflow: scroll">
+          <ion-grid style="max-height: 135px; overflow: scroll">
             <ion-row class="participant-row">
               <ion-col *ngFor="let user of moment.user_list_1; index as j" class="ion-align-self-center" size="auto">
                 <div class="participant-centered">
@@ -503,7 +503,7 @@
             <ion-label color="darkgrey" class="section-label ion-text-uppercase" *ngIf="moment.matrix_string[i] && !moment.matrix_string[i][5] && moment.resource['en-US'].matrix_string[i]">{{moment.resource['en-US'].matrix_string[i][7]}}</ion-label>
             <ion-label color="darkgrey" class="section-label ion-text-uppercase" *ngIf="moment.matrix_string[i] && moment.matrix_string[i][5]">{{moment.matrix_string[i][5]}}</ion-label>
           </ion-item>
-          <ion-grid style="max-height: 20%; overflow: scroll">
+          <ion-grid style="max-height: 135px; overflow: scroll">
             <ion-row class="participant-row">
               <ion-col *ngFor="let user of moment.user_list_2; index as j" class="ion-align-self-center" size="auto">
                 <div class="participant-centered">
@@ -522,7 +522,7 @@
             <ion-label color="darkgrey" class="section-label ion-text-uppercase" *ngIf="moment.matrix_string[i] && !moment.matrix_string[i][1] && moment.resource['en-US'].matrix_string[i]">{{moment.resource['en-US'].matrix_string[i][9]}}</ion-label>
             <ion-label color="darkgrey" class="section-label ion-text-uppercase" *ngIf="moment.matrix_string[i] && moment.matrix_string[i][1]">{{moment.matrix_string[i][1]}}</ion-label>
           </ion-item>
-          <ion-grid style="max-height: 20%; overflow: scroll">
+          <ion-grid style="max-height: 135px; overflow: scroll">
             <ion-row class="participant-row">
               <ion-col *ngFor="let user of moment.user_list_3; index as j" class="ion-align-self-center" size="auto">
                 <div class="participant-centered">
