--- a/src/app/pages/feature/manage/feature-subscription/feature-subscription.page.html
+++ b/src/app/pages/feature/manage/feature-subscription/feature-subscription.page.html
@@ -114,7 +114,7 @@
               </ion-card-header>
               <ion-card-content>
                 <form [formGroup]="billingForm">
-                  <div [id]=stripeElementName class="field"></div>
+                  <ngx-stripe-card [stripe]="stripeService" [options]="cardOptions" class="field"></ngx-stripe-card>
                   <ion-item>
                     <ion-label position="stacked">Name</ion-label>
                     <ion-input autocomplete="on" type="text" formControlName="name" placeholder="Jane Doe"></ion-input>
