added initial badges

--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -490,7 +490,7 @@
                 <div class="participant-centered">
                   <ion-avatar class="participant-avatar" slot="start">
                     <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-                    <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+                    <div *ngIf="!user.avatar" class="empty-avatar-letters">{{ user.first_name[0] }}{{ user.last_name[0] }}</div>
                   </ion-avatar>
                 </div>
               </ion-col>
@@ -509,7 +509,7 @@
                 <div class="participant-centered">
                   <ion-avatar class="participant-avatar" slot="start">
                     <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-                    <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+                    <div *ngIf="!user.avatar" class="empty-avatar-letters">{{ user.first_name[0] }}{{ user.last_name[0] }}</div>
                   </ion-avatar>
                 </div>
               </ion-col>
@@ -528,7 +528,7 @@
                 <div class="participant-centered">
                   <ion-avatar class="participant-avatar" slot="start">
                     <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-                    <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+                    <div *ngIf="!user.avatar" class="empty-avatar-letters">{{ user.first_name[0] }}{{ user.last_name[0] }}</div>
                   </ion-avatar>
                 </div>
               </ion-col>
