--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -522,6 +522,7 @@ app-showfeature {
       display: flex;
       align-items: center;
       justify-content: center;
+      cursor: pointer;
     }
 
     .participant-joined {
