fix chat color scheme in quote

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,7 +82,7 @@
   --ion-color-grey-tint: #ececec;
 
   /** lightgrey **/
-  --ion-color-lightgrey: #C6C6C6;
+  --ion-color-lightgrey: #f2f2f2;
   --ion-color-lightgrey-rgb: 242,242,242;
   --ion-color-lightgrey-contrast: #000000;
   --ion-color-lightgrey-contrast-rgb: 0,0,0;
